--- a/Favourites/favourites.html
+++ b/Favourites/favourites.html
@@ -31,7 +31,7 @@
         <!-- nav 1st child  -->
         <div class="logo-menu">
           <div class="imdb-logo">
-            <a href="../Homepage/index.html">
+            <a href="../index.html">
               <img src="../assets/IMDB.png" alt="imdb-logo" />
             </a>
           </div>
