--- a/Movies/movies.html
+++ b/Movies/movies.html
@@ -30,7 +30,7 @@
       <nav class="nav-menu">
         <div class="logo-menu1">
           <div class="imdb-logo">
-            <a href="../Homepage/index.html"
+            <a href="../index.html"
               ><img src="../assets/IMDB.png" alt="imdb-logo"
             /></a>
           </div>
