--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>IMDb</title>
     <!-- style css link for index page  -->
-    <link rel="stylesheet" href="./style.css" />
+    <link rel="stylesheet" href="./Homepage/style.css" />
     <!-- here we use font awsome script toolkit -->
     <script
       src="https://kit.fontawesome.com/74894dafb2.js"
@@ -32,7 +32,7 @@
        
         <div class="logo-menu">
           <div class="imdb-logo" id="i-logo">
-            <img src="../assets/IMDB.png" alt="imdb-logo" />
+            <img src="./assets/IMDB.png" alt="imdb-logo" />
           </div>
         </div>
         <!-- nav second child  -->
@@ -47,7 +47,7 @@
         </div>
         <!-- nav 3rd child  -->
         <div class="Favourite">
-          <a href="../Favourites/favourites.html">
+          <a href="./Favourites/favourites.html">
             <h3 class="hover"><i class="fa-solid fa-folder-plus"></i><span class="home-fav-icon">Favourites</span</h3>
            
           </a>
@@ -68,6 +68,6 @@
       </div>
     </section>
     <!-- external javascript for home page  -->
-    <script type="text/javascript" src="./index.js"></script>
+    <script type="text/javascript" src="./Homepage/index.js"></script>
   </body>
 </html>
